(fix): set a height for circle to prevent squashing

--- a/src/app/modules/groups/sidebar-markers/sidebar-markers.component.scss
+++ b/src/app/modules/groups/sidebar-markers/sidebar-markers.component.scss
@@ -23,6 +23,7 @@
 
     img {
       width: 30px;
+      height: 30px;
       border-radius: 50%;
       vertical-align: middle;
       border: 1px solid #ececec;
